playbooks/spring-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: spring.christoslamprou.cloudns.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rentestate-app
                port:
                  name: rentestate-app
  tls:
    - hosts:
        - spring.christoslamprou.cloudns.pro
      secretName: spring-production-certificate
